Module Filter 7.x-2.0-alpha1, 2013-11-18
----------------------------------------
by greenSkin: Tabs now should always be visible while scrolling large lists of
  modules.
#1854348 by alexweber, greenSkin: Make filter textfield wider on modules page
  when viewing as tabs.
by greenSkin: Fixed what was suppose to be a call to variable_set().
#1370492 by greenSkin: Remember selected tab after modules form submit.
by greenSkin: Changed the title for the 'module_filter_dynamic_save_position'
  checkbox to make it clearer what it does.
#1166414 by greenSkin: Fixed broken submit when tabs are disabled. We no longer
  reroute the theme of the system modules page unless tabs are enabled.
by greenSkin: Fixed issue on Available updates page where the update state
  would not be remembered.
by greenSkin: Fixed 7200 update to rebuild the theme registry at the same time
  as rebuilding the menu.
by greenSkin: Fixed issue relating to row coloring when enabling/disabling
  modules via switch due to recent fix for jQuery Update module.
by greenSkin: Added functionality to show recently enabled/disabled modules.
#1710230 by littlekoala, greenSkin: Fixed On | Off buttons does not change
  state with jquery_update() module active.
by greenSkin: Added description to filter textfield on permissions page.
by greenSkin: Added filter to user permissions page.
by greenSkin: Fixed styling when JavaScript is disabled.
by greenSkin: Fixed compatiblility with page_actions.
#1351184 klonos, greenSkin: Added support for update_advanced "Ignored from
  settings".
#1149978 by good_man, greenSkin: Added RTL Styling for tabs and toggle switch.
by greenSkin: Hide toggle switch when JavaScript is disabled.
by greenSkin: Added support for ctools dropbutton as well as views styling for
  ctools dropbutton.
by greenSkin: Improved hash validation.
by greenSkin: Added ability for tabs to be disabled. Direct use case is when
  the "New" tab contains zero new modules.